# apps-to-panel

./: .gitignore  README.md  dash.js  export-zip.sh  extension.js  meson.build  metadata.json  prefs.js
po/: POTFILES.in
schemas/: meson.build  org.gnome.shell.extensions.apps-to-panel.gschema.xml
